<resources>
    <string name="app_name">hw_1_4</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="etTitle">Title</string>
    <string name="etDesc">Description</string>
    <string name="tvSave">Save</string>
    <string name="itemTvTitle">Title</string>
    <string name="itemTvDesc">Desc</string>
    <string name="tv_update">UPDATE</string>
    <string name="_update">Update</string>
    <string name="tv_skip">Skip</string>
    <string name="onBoarding_title">Title</string>
    <string name="onBoarding_desc">Description</string>
    <string name="onBoarding_getStarted">Get Started</string>
    <string name="auth_is_success">Auth is success</string>
    <string name="btn_send_code">Send code</string>
    <string name="tv_996">+996</string>
    <string name="et_phone_number">Phone Number</string>
    <string name="et_code">Code</string>
    <string name="btn_accept">Accept</string>
</resources>