<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.hw_1_4.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.hw_1_4.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.hw_1_4.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.hw_1_4.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_onBoardingFragment"
        android:name="com.example.hw_1_4.ui.onBoarding.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" />

    <fragment
        android:id="@+id/taskFragment"
        android:name="com.example.hw_1_4.ui.Task.TaskFragment"
        android:label="Task"
        tools:layout="@layout/fragment_task" />
    <fragment
        android:id="@+id/codeFragment"
        android:name="com.example.hw_1_4.ui.auth.code.CodeFragment"
        android:label="Code"
        tools:layout="@layout/fragment_code" />
    <fragment
        android:id="@+id/phoneFragment"
        android:name="com.example.hw_1_4.ui.auth.phone.PhoneFragment"
        android:label="Phone Authentication"
        tools:layout="@layout/fragment_phone" />

</navigation>